# refactored-couscous

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  reset_db.py  wipe.py
app/api/: routes.py
app/api/v1/: api.py
app/api/v1/endpoints/: config.py  ingest.py  list_prompts.py  query.py
app/components/chunking/: base.py  factory.py  paragraph.py  recursive.py  semantic.py  token_safe.py
app/components/embedders/: langchain_wrapper.py  openai_embedder.py
app/components/llms/: base.py  factory.py  llamacpp_llm.py  ollama_llm.py  openai_llm.py
app/components/loaders/: pdf_loader.py  web_loader.py
app/components/loaders/strategies/: base.py  router.py  table.py  (+1 more)
app/components/query_translation/: __init__.py  base.py  decomposition.py  enricher.py  factory.py  hyde.py
app/components/vector_dbs/: pgvector_db.py  pinecone_db.py
app/core/: config.py  dependencies.py  interfaces.py  prompt_loader.py
app/models/: api_requests.py  api_response.py  domain.py  frontend_config.py  web_loader.py
app/prompts/: default.txt
app/prompts/system/: can_spam.md  default.md  hyde.md  hyde.txt  multi_query.md  multi_query.txt  rag_fusion.md  rag_fusion.txt  step_back.md  step_back.txt  strict_context_only.md  strict_context_only.txt
app/prompts/user/: hyde.txt  multi_query.txt  rag_fusion.md  step_back.txt
app/services/: ingestion.py  rag_engine.py
docs/: README.md  openapi.yaml
scripts/: demo_full_pipeline.py  demo_ingest_custom.py  demo_ingest_file.py  demo_ingest_url.py
scripts/emails/: validator.py
scripts/emails/test_data/: emails_testdata.txt
